--- a/src/views/search.html
+++ b/src/views/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-    <link rel="icon" href="../storage/img.svg" type="image/x-icon" />
+    <link rel="icon" href="../storage/img/noteicon.svg" type="image/x-icon" />
     <title>search</title>
   </head>
   <body>
